<resources>
    <string name="app_name">Store Gestor</string>

    <!-- Home Titles -->
    <string name="title_main">COMPRA Y GUARDA</string>
    <string name="text_shopping_button">Lista de compras</string>
    <string name="text_inventory_button">Mis productos</string>
    <string name="text_places_interest_button">Lugares de interés</string>
    <string name="text_total_Pay">Total de productos:</string>
    <string name="text_total_Pay_number">17,500</string>

    <!-- Inventory Titles -->
    <string name="text_linearL_amount">Cantidad</string>
    <string name="text_linearL_product">Producto</string>
    <string name="text_linearL_price">Precio</string>
    <string name="editText_name_search">Buscar por nombre</string>

    <!-- Toolbar menu Titles -->
    <string name="text_toolbar_actionList">Lista de acciones</string>
    <string name="text_toolbar_preferences">Preferencias</string>
    <string name="text_toolbar_about">Acerca del creador</string>
    <string name="text_toolbar_exit">Salir</string>

    <!-- Toolbar inventory Titles -->
    <string name="text_toolbar_search">Buscar</string>
    <string name="text_toolbar_orderBy">Ordenar</string>
    <string name="select_category">Selecciona una categoría</string>

    <!-- Edit product Titles -->
    <string name="editTextProductName_hint">Nombre del producto</string>
    <string name="editTextProductPrice_hint">Precio</string>
    <string name="editTextProductQuantity_hint">Cantidad</string>
    <string name="editTextProductDescription_hint">Descripción</string>
    <string name="buttonText_buttonSaveEdit">Guardar</string>

    <!-- About Titles -->
    <string name="text_about">Este proyecto fue creado por el estudiante de ingeniería en desarrollo de videojuegos y realidad virtual.\n\nLuis Otarola</string>

    <!-- Action Titles -->
    <string name="title_activity_actionList">Historial de movimientos</string>

    <!-- ButtonAdd Titles -->
    <string name="text_button_add_product">Añadir producto</string>
    <string name="text_button_add_place">Añadir lugar de interés</string>

    <!-- Custom_Row.xml Titles -->
    <string name="icon2_descriptionEdit">Editar</string>
    <string name="icon2_descriptionDelete">Eliminar</string>
    <string name="icon2_descriptionSeeDetail">Mostrar detalles</string>
    <string name="text_cantidad_customRow">C</string>
    <string name="text_precio_customRow">2000</string>

    <!-- Popup product Titles -->
    <string name="text_popup_name">Nombre del Producto</string>
    <string name="editText_popup_name">Ingrese el nombre del producto</string>
    <string name="text_popup_price">Precio del Producto</string>
    <string name="editText_popup_price">Ingrese el precio del producto</string>
    <string name="text_popup_amount">Cantidad del Producto</string>
    <string name="editText_popup_amount">Ingrese la cantidad del producto</string>
    <string name="text_popup_description">Descripción del Producto</string>
    <string name="editText_popup_description">Ingrese la descripción del producto</string>
    <string name="text_popup_category">Categoría del Producto</string>

    <!-- Adapter product Titles -->
    <string name="wordName">Nombre</string>
    <string name="wordPrice">Precio</string>
    <string name="wordAmount">Cantidad</string>
    <string name="wordDescription">Descripción</string>
    <string name="wordCategory">Categoría</string>

    <!-- Adapter action Titles -->
    <string name="wordNameProduct">Nombre del producto</string>
    <string name="wordAction">Acción realizada</string>

    <!-- Details product Titles -->
    <string name="detail_name">Nombre: Nombre del Producto</string>
    <string name="detail_price">Precio: $100.00</string>
    <string name="detail_quantity">Cantidad: 10</string>
    <string name="detail_description">Descripción: Descripción detallada del producto.</string>
    <string name="detail_category">Categoría: Categoría del producto</string>
    <string name="text_seeDetail_title">Detalle del Producto</string>

    <!-- Edit product Titles -->
    <string name="text_editProduct_title">Edición del Producto</string>

    <!-- Setting Titles -->
    <string name="title_activity_settings">Configuración</string>

    <!-- Preference Titles -->
    <string name="sort_order_title">Orden de clasificación</string>
    <string name="messages_header">Ajustes</string>

    <!-- DB Preference Titles -->
    <string name="pref_category_database">Base de datos</string>
    <string name="pref_clear_database_key">clear_database</string>
    <string name="pref_clear_database_title">Borrar Base de datos</string>
    <string name="pref_clear_database_summary">Borrar todos los datos de la base de datos</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Nombre de usuario</string>

</resources>
