<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="sortOrder"
            app:defaultValue="default_value"
            app:entries="@array/sort_order_entries"
            app:entryValues="@array/sort_order_values"
            app:title="@string/sort_order_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <!--PreferenceCategory app:title="Base de datos">
        <Preference
            android:key="@string/pref_clear_database_key"
            android:title="@string/pref_clear_database_title"
            android:summary="@string/pref_clear_database_summary"
            android:icon="@drawable/ic_delete"
            android:iconSpaceReserved="true" />
    </PreferenceCategory-->

</PreferenceScreen>
